# idx-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  FEATURE_SPEC.md  LICENSE  Makefile  README.md  SPEC.md  TEST_REPORT.md  TODO.md  extractor.py  flake.nix  go.mod  go.sum  main.go  prek.toml  pyproject.toml
.codex/skills/idx-release/: SKILL.md
.codex/skills/idx-release/agents/: openai.yaml
.github/workflows/: ci.yml  publish-ownership-snapshot.yml
contrib/systemd/: idx-ownership-snapshot-publish.service  idx-ownership-snapshot-publish.timer
docs/: ARCHITECTURE.md  CONVENTIONS.md  OWNERSHIP_PUBLISH.md  OWNERSHIP_SELF_HOSTED.md  OWNERSHIP_SYNC.md  SMOKE.md
internal/cli/: brave.go  extractor.go  main.go  msn_cli.go  news_cli.go
msn/: bing_client.go  db.go  idx_stocks.go  msn_client.go  msn_screener.go  msn_stock.go  msn_types.go  news_analysis.go  rate_limiter.go
research/: OWNERSHIP_FEATURE_DESIGN.md  ownership_202603_analysis.json  ownership_202603_extracted.txt  package-lock.json  package.json
scripts/: audit-msn-fundamentals.sh  build-latest-ownership-snapshot.sh  build-ownership-snapshot.sh  e2e_run.sh  export_dashboard.py  export_history.py  export_simple.py  live-smoke.sh  publish-ownership-snapshot.sh  release_bundle.sh
src/: cache.rs  config.rs  curl_impersonate.rs  error.rs  main.rs
src/analysis/: fundamental.rs  mod.rs  signals.rs  technical.rs
src/api/: mod.rs  msn.rs  msn_symbol_ids.tsv  types.rs  yahoo.rs
src/api/msn/: bing.rs  client.rs  map.rs  mod.rs  parse.rs  raw_types.rs  symbols.rs
src/api/yahoo/: client.rs  map.rs  mod.rs  parse.rs  raw_types.rs
src/cli/: cache.rs  config.rs  mod.rs  ownership.rs  stocks.rs
src/output/: json.rs  mod.rs  table.rs
src/ownership/: archive.rs  db.rs  entities.rs  graph.rs  mod.rs  parser.rs  remote.rs  search.rs  snapshot.rs  types.rs
tests/: cli.rs  test_export_simple.py
tests/fixtures/: bing_buyers_bbca.json  bing_holders_bbca.json  chart_bbca_1d.json  chart_bbca_3mo.json  chart_bbca_with_gap.json  idx_announcement_kepemilikan.json  ksei_above1_stext_excerpt.xml  ksei_above1_stext_excerpt_prev.xml  ksei_above5_stext_excerpt.xml  ksei_announcement_wrapper_stext_excerpt.xml  ksei_balancepos_20260130_excerpt.txt  ksei_balancepos_20260227_excerpt.txt  ksei_investor_type_stext_excerpt.xml  ksei_stext_sample.xml  msn_chart_bbca_3m.json  msn_chart_bbca_3mo.json  msn_earnings_bbca.json  msn_financials_bbca.json  msn_insights_bbca.json  msn_keyratios_bbca.json  msn_keyratios_industry_only.json  msn_keyratios_infinity.json  msn_keyratios_negative_infinity.json  msn_news_bbca.json  msn_profile_bbca.json  msn_quote_bbca.json  msn_screener_id_topperfs.json  msn_sentiment_bbca.json  quotesummary_bbca.json
tests/go/: cli_test.go  live_e2e_test.go
