[package]
name = "idx-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Indonesian stock market (IDX) analysis"
license = "MIT"
repository = "https://github.com/0xrsydn/idx-cli"
homepage = "https://github.com/0xrsydn/idx-cli"
keywords = ["idx", "stocks", "indonesia", "cli", "finance"]
categories = ["command-line-utilities", "finance"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ureq = { version = "3", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
owo-colors = "4"
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
fastrand = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
