[package]
name = "idx-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Indonesian stock market (IDX) analysis"
license = "MIT"
repository = "https://github.com/0xrsydn/idx-cli"
homepage = "https://github.com/0xrsydn/idx-cli"
keywords = ["idx", "stocks", "indonesia", "cli", "finance"]
categories = ["command-line-utilities", "finance"]

[features]
default = ["ownership"]
ownership = ["dep:rusqlite", "dep:quick-xml", "dep:sha2"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ureq = { version = "3", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
owo-colors = "4"
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
fastrand = "2"
rusqlite = { version = "0.32", features = ["bundled-full"], optional = true }
quick-xml = { version = "0.37", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
